@@ -10,7 +10,9 @@ Release:    v2014012404
 
 - Ability added for instructors to refresh individual rows in a Turnitin Assignment.
 - Automatic grade refreshing from Turnitin can now be turned off in Turnitin Assignments.
-- Anonymous marking and Translated matching settings removed in PP modules if they are disabled in config. 
+- Anonymous marking and Translated matching settings removed in PP modules if they are disabled in config.
+- EULA closing reworked to accomodate IE
+- Javascript cleaned up in block to use Moodle value (Thanks to Skylar Kelty).
 - Erroneous debugging removed (Thanks to Skylar Kelty).
 
 ####################################################################################
