@@ -291,11 +291,10 @@ class turnitintooltwo_view {
         // Check if the submitting user has accepted the EULA
         $eulaaccepted = false;
         if ($userid == $USER->id) {
-            $user = $DB->get_record('turnitintooltwo_users', array('userid' => $userid));
-            $soap_user = new turnitintooltwo_user($userid, "Learner");
+            $user = new turnitintooltwo_user($userid, "Learner");
             $coursedata = $turnitintooltwoassignment->get_course_data($turnitintooltwoassignment->turnitintooltwo->course);
-            $soap_user->join_user_to_class($coursedata->turnitin_cid);
-            $eulaaccepted = $user->user_agreement_accepted;
+            $user->join_user_to_class($coursedata->turnitin_cid);
+            $eulaaccepted = (!$user->user_agreement_accepted) ? $user->get_accepted_user_agreement() : $user->user_agreement_accepted;
         }
 
         $parts = $turnitintooltwoassignment->get_parts_available_to_submit();
@@ -374,7 +373,7 @@ class turnitintooltwo_view {
 
                     $ula = html_writer::tag('div', get_string('turnitinula', 'turnitintooltwo'), array('class' => 'turnitin_ula', 'data-userid' => $userid));
                     $noscriptula = html_writer::tag('noscript',
-                                            $this->output_dv_launch_form("useragreement", 0, $soap_user->tii_user_id, "Learner",
+                                            $this->output_dv_launch_form("useragreement", 0, $user->tii_user_id, "Learner",
                                             get_string('turnitinula', 'turnitintooltwo'), false)." ".
                                                 get_string('noscriptula', 'turnitintooltwo'),
                                             array('class' => 'warning turnitin_ula_noscript'));
@@ -404,7 +403,7 @@ class turnitintooltwo_view {
             $customdata = array("disable_form_change_checker" => true,
                                 "elements" => array(array('html', $OUTPUT->box('', '', 'useragreement_inputs'))));
             $eulaform = new turnitintooltwo_form($turnitincall->getApiBaseUrl().TiiLTI::EULAENDPOINT, $customdata,
-                                                    'POST', $target = '_blank', array('id' => 'eula_launch'));
+                                                    'POST', $target = 'eulaWindow', array('id' => 'eula_launch'));
             $output .= $OUTPUT->box($eulaform->display(), '', 'useragreement_form');
         }
 
